processed/jira/txt/LU/LU-17767.txt
Key:        LU-17767
Summary:    error: 'struct lsmcontext' has no member named 'slot'
Link:       https://jira.whamcloud.com/browse/LU-17767
Type:       Bug
Priority:   Minor
Status:     Resolved
Resolution: Fixed
Assignee:   Sebastien Buisson
Reporter:   Jian Yu
Created:    Mon, 22 Apr 2024 07:43:53 +0000
Updated:    Tue, 21 May 2024 20:09:59 +0000
Resolved:   Tue, 21 May 2024 20:09:59 +0000

--- Environment ---
kernel 6.8.0-31-generic

--- Description ---
Building Lustre with kernel 6.8.0-31-generic failed as follows:

  CC [M]  /root/lustre-release/libcfs/libcfs/linux/linux-prim.o
In file included from /root/lustre-release/libcfs/libcfs/linux/linux-prim.c:49:
/root/lustre-release/lustre/include/lustre_compat.h: In function 'lsmcontext_init':
/root/lustre-release/lustre/include/lustre_compat.h:760:11: error: 'struct lsmcontext' has no member named 'slot'
  760 |         cp->slot = slot;
      |           ^~

https://git.launchpad.net/~ubuntu-kernel/ubuntu/+source/linux/+git/noble/commit/include/linux/security.h?h=Ubuntu-6.8.0-22.22&id=dad7cffb719e45fd43121ade4ada90ff376c9cad

https://git.launchpad.net/~ubuntu-kernel/ubuntu/+source/linux/+git/noble/commit/?h=Ubuntu-6.8.0-22.22&id=43eb0e1c42dc483a55470177776b4ebaf9f82121

--- Comment (pjones, Tue, 21 May 2024 20:09:59 +0000) ---
Merged for 2.16

--- Comment (gerrit, Tue, 21 May 2024 18:43:28 +0000) ---
"Oleg Drokin " merged in patch https://review.whamcloud.com/c/fs/lustre-release/+/54881/

Subject: LU-17767 build: struct lsmcontext has slot or id member

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: d74d86840056e83cd0138a261ab7b6040a43bfb4

--- Comment (gerrit, Tue, 23 Apr 2024 15:14:36 +0000) ---
"Sebastien Buisson " uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/54881

Subject: LU-17767 build: struct lsmcontext has slot or id member

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: d00b7ad0d19770bc694fd120fb2b7970fbc00340

--- Comment (yujian, Mon, 22 Apr 2024 07:45:19 +0000) ---
Hi sebastien, could you please help with resolving the above issue? Thank you.
